--- a/GitHub_UsersList/View/Base.lproj/Main.storyboard
+++ b/GitHub_UsersList/View/Base.lproj/Main.storyboard
@@ -15,42 +15,59 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MEa-yk-igo">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" separatorInsetReference="fromAutomaticInsets" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MEa-yk-igo">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="sectionIndexBackgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="99" id="vwQ-vY-7Dt" customClass="UserListTableViewCell" customModule="GitHub_UsersList" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="99"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="100" id="vwQ-vY-7Dt" customClass="UserListTableViewCell" customModule="GitHub_UsersList" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vwQ-vY-7Dt" id="Xwy-0Q-b9Q">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="99"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eT0-Oi-nbL">
-                                                    <rect key="frame" x="20" y="13" width="74" height="72"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J2A-u0-aHq" customClass="DesignView" customModule="GitHub_UsersList" customModuleProvider="target">
+                                                    <rect key="frame" x="7" y="5" width="400" height="90"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                </view>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="y27-Hn-XpF">
-                                                    <rect key="frame" x="166.5" y="10.5" width="81" height="78.5"/>
+                                                    <rect key="frame" x="142" y="10" width="91" height="80"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EP0-R9-kDi">
-                                                            <rect key="frame" x="0.0" y="0.0" width="81" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="91" height="22"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="22" id="R0W-Cs-ub2"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" name="LaoSangamMN" family="Lao Sangam MN" pointSize="20"/>
+                                                            <color key="textColor" red="0.25882352939999997" green="0.25882352939999997" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="usg-9m-I8k">
-                                                            <rect key="frame" x="0.0" y="28.5" width="81" height="50"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="50" id="t7r-lL-Oua"/>
-                                                            </constraints>
+                                                            <rect key="frame" x="0.0" y="30" width="91" height="50"/>
+                                                            <color key="backgroundColor" red="0.90588235289999997" green="0.29803921570000003" blue="0.23529411759999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         </imageView>
                                                     </subviews>
                                                 </stackView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eT0-Oi-nbL">
+                                                    <rect key="frame" x="20" y="17" width="72" height="66"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="72" id="An1-9n-One"/>
+                                                        <constraint firstAttribute="width" constant="72" id="fdK-IY-BF6"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="y27-Hn-XpF" firstAttribute="centerX" secondItem="Xwy-0Q-b9Q" secondAttribute="centerX" id="Nz0-Dq-EN6"/>
-                                                <constraint firstItem="y27-Hn-XpF" firstAttribute="centerY" secondItem="Xwy-0Q-b9Q" secondAttribute="centerY" id="eqq-Gs-AAL"/>
+                                                <constraint firstItem="y27-Hn-XpF" firstAttribute="top" secondItem="Xwy-0Q-b9Q" secondAttribute="top" constant="10" id="0Jz-26-HTS"/>
+                                                <constraint firstAttribute="bottom" secondItem="J2A-u0-aHq" secondAttribute="bottom" constant="5" id="AyN-Bp-Y2h"/>
+                                                <constraint firstItem="J2A-u0-aHq" firstAttribute="top" secondItem="Xwy-0Q-b9Q" secondAttribute="top" constant="5" id="KId-qP-bBL"/>
+                                                <constraint firstAttribute="bottom" secondItem="y27-Hn-XpF" secondAttribute="bottom" constant="10" id="eNj-g5-Qa1"/>
+                                                <constraint firstItem="eT0-Oi-nbL" firstAttribute="leading" secondItem="Xwy-0Q-b9Q" secondAttribute="leading" constant="20" id="i9T-K4-pvG"/>
+                                                <constraint firstAttribute="trailing" secondItem="J2A-u0-aHq" secondAttribute="trailing" constant="7" id="iOC-rv-VbY"/>
+                                                <constraint firstItem="J2A-u0-aHq" firstAttribute="leading" secondItem="Xwy-0Q-b9Q" secondAttribute="leading" constant="7" id="riC-HN-KPT"/>
+                                                <constraint firstItem="y27-Hn-XpF" firstAttribute="leading" secondItem="eT0-Oi-nbL" secondAttribute="trailing" constant="50" id="tVb-bD-75N"/>
+                                                <constraint firstAttribute="bottom" secondItem="eT0-Oi-nbL" secondAttribute="bottom" constant="17" id="v2g-it-J3y"/>
+                                                <constraint firstItem="eT0-Oi-nbL" firstAttribute="top" secondItem="Xwy-0Q-b9Q" secondAttribute="top" constant="17" id="zNh-EY-0a2"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
