--- a/GitHub_UsersList/View/Base.lproj/Main.storyboard
+++ b/GitHub_UsersList/View/Base.lproj/Main.storyboard
@@ -31,26 +31,26 @@
                                                     <rect key="frame" x="7" y="5" width="400" height="90"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 </view>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="y27-Hn-XpF">
-                                                    <rect key="frame" x="142" y="10" width="91" height="80"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="y27-Hn-XpF">
+                                                    <rect key="frame" x="147" y="10" width="91" height="80"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EP0-R9-kDi">
-                                                            <rect key="frame" x="0.0" y="0.0" width="91" height="22"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="22" id="R0W-Cs-ub2"/>
-                                                            </constraints>
+                                                            <rect key="frame" x="0.0" y="0.0" width="91" height="49"/>
                                                             <fontDescription key="fontDescription" name="LaoSangamMN" family="Lao Sangam MN" pointSize="20"/>
                                                             <color key="textColor" red="0.25882352939999997" green="0.25882352939999997" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="usg-9m-I8k">
-                                                            <rect key="frame" x="0.0" y="30" width="91" height="50"/>
-                                                            <color key="backgroundColor" red="0.90588235289999997" green="0.29803921570000003" blue="0.23529411759999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="staff" translatesAutoresizingMaskIntoConstraints="NO" id="usg-9m-I8k">
+                                                            <rect key="frame" x="5.5" y="49" width="80" height="31"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="31" id="Cmn-5P-JtR"/>
+                                                                <constraint firstAttribute="width" constant="80" id="sqB-lH-izJ"/>
+                                                            </constraints>
                                                         </imageView>
                                                     </subviews>
                                                 </stackView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eT0-Oi-nbL">
-                                                    <rect key="frame" x="20" y="17" width="72" height="66"/>
+                                                    <rect key="frame" x="35" y="17" width="72" height="66"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="72" id="An1-9n-One"/>
                                                         <constraint firstAttribute="width" constant="72" id="fdK-IY-BF6"/>
@@ -62,10 +62,10 @@
                                                 <constraint firstAttribute="bottom" secondItem="J2A-u0-aHq" secondAttribute="bottom" constant="5" id="AyN-Bp-Y2h"/>
                                                 <constraint firstItem="J2A-u0-aHq" firstAttribute="top" secondItem="Xwy-0Q-b9Q" secondAttribute="top" constant="5" id="KId-qP-bBL"/>
                                                 <constraint firstAttribute="bottom" secondItem="y27-Hn-XpF" secondAttribute="bottom" constant="10" id="eNj-g5-Qa1"/>
-                                                <constraint firstItem="eT0-Oi-nbL" firstAttribute="leading" secondItem="Xwy-0Q-b9Q" secondAttribute="leading" constant="20" id="i9T-K4-pvG"/>
+                                                <constraint firstItem="eT0-Oi-nbL" firstAttribute="leading" secondItem="Xwy-0Q-b9Q" secondAttribute="leading" constant="35" id="i9T-K4-pvG"/>
                                                 <constraint firstAttribute="trailing" secondItem="J2A-u0-aHq" secondAttribute="trailing" constant="7" id="iOC-rv-VbY"/>
                                                 <constraint firstItem="J2A-u0-aHq" firstAttribute="leading" secondItem="Xwy-0Q-b9Q" secondAttribute="leading" constant="7" id="riC-HN-KPT"/>
-                                                <constraint firstItem="y27-Hn-XpF" firstAttribute="leading" secondItem="eT0-Oi-nbL" secondAttribute="trailing" constant="50" id="tVb-bD-75N"/>
+                                                <constraint firstItem="y27-Hn-XpF" firstAttribute="leading" secondItem="eT0-Oi-nbL" secondAttribute="trailing" constant="40" id="tVb-bD-75N"/>
                                                 <constraint firstAttribute="bottom" secondItem="eT0-Oi-nbL" secondAttribute="bottom" constant="17" id="v2g-it-J3y"/>
                                                 <constraint firstItem="eT0-Oi-nbL" firstAttribute="top" secondItem="Xwy-0Q-b9Q" secondAttribute="top" constant="17" id="zNh-EY-0a2"/>
                                             </constraints>
@@ -116,4 +116,7 @@
             <point key="canvasLocation" x="1698.5507246376812" y="147.99107142857142"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="staff" width="108.5" height="31"/>
+    </resources>
 </document>
